[metadata]
name = cron-threads 
version = 0.1.0
author = Alexandru Furdui
author_email = alexandru.vlad.furdui@gmail.com
description = Python Module to enable running tasks inside threads based on cron schedule
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FrdAlex/Python-Thread-Scheduler
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src